// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionCorrect /> should render component when finished 1`] = `
<div
  className="sc-bZQynM gObhry"
>
  <div
    className="sc-gzVnrw fIdgwl"
  >
    <div
      className="sc-htoDjs kGLvMv"
    >
      一番
       / 
      一字決まり
    </div>
    <button
      className="MuiButtonBase-root-32 MuiButton-root-6 MuiButton-outlined-14 Component-button-1 Component-normalButton-2"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "fontSize": "1.4rem",
          "height": 33,
          "minHeight": 33,
          "minWidth": 33,
          "padding": 0,
          "position": "absolute",
          "right": -48,
          "top": 0,
          "width": 33,
        }
      }
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-7"
      >
        詳
      </span>
      <span
        className="MuiTouchRipple-root-60"
      />
    </button>
  </div>
  <div
    className="sc-dnqmqq kNnMtA"
  >
    <div
      className="sc-iwsKbI csWNzc"
    >
      <div
        className="sc-gZMcBi iMeOpj"
      >
        初句
      </div>
      <div
        className="sc-gZMcBi sc-gqjmRU bVLlxE"
      >
        二句
      </div>
      <div
        className="sc-gZMcBi sc-VigVT eLjnJN"
      >
        三句
      </div>
      <div
        className="sc-gZMcBi sc-jTzLTM cQZuKP"
      >
        四句
      </div>
      <div
        className="sc-gZMcBi sc-fjdhpX iYPDqu"
      >
        五句
      </div>
      <div
        className="sc-jzJRlG eojZtk"
      >
        詠み手
      </div>
    </div>
  </div>
  <button
    className="MuiButtonBase-root-32 MuiButton-root-6 MuiButton-outlined-14 Component-button-1 Component-normalButton-2"
    disabled={false}
    onBlur={[Function]}
    onClick={[MockFunction]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "marginTop": "32px",
      }
    }
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-7"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-35 MuiIcon-fontSizeSmall-42 Component-normalIcon-4"
      >
        arrow_forward_ios
      </span>
      結果を見る
    </span>
    <span
      className="MuiTouchRipple-root-60"
    />
  </button>
</div>
`;

exports[`<QuestionCorrect /> should render component when not finished 1`] = `
<div
  className="sc-bZQynM gObhry"
>
  <div
    className="sc-gzVnrw fIdgwl"
  >
    <div
      className="sc-htoDjs kGLvMv"
    >
      一番
       / 
      一字決まり
    </div>
    <button
      className="MuiButtonBase-root-32 MuiButton-root-6 MuiButton-outlined-14 Component-button-1 Component-normalButton-2"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "fontSize": "1.4rem",
          "height": 33,
          "minHeight": 33,
          "minWidth": 33,
          "padding": 0,
          "position": "absolute",
          "right": -48,
          "top": 0,
          "width": 33,
        }
      }
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-7"
      >
        詳
      </span>
      <span
        className="MuiTouchRipple-root-60"
      />
    </button>
  </div>
  <div
    className="sc-dnqmqq kNnMtA"
  >
    <div
      className="sc-iwsKbI csWNzc"
    >
      <div
        className="sc-gZMcBi iMeOpj"
      >
        初句
      </div>
      <div
        className="sc-gZMcBi sc-gqjmRU bVLlxE"
      >
        二句
      </div>
      <div
        className="sc-gZMcBi sc-VigVT eLjnJN"
      >
        三句
      </div>
      <div
        className="sc-gZMcBi sc-jTzLTM cQZuKP"
      >
        四句
      </div>
      <div
        className="sc-gZMcBi sc-fjdhpX iYPDqu"
      >
        五句
      </div>
      <div
        className="sc-jzJRlG eojZtk"
      >
        詠み手
      </div>
    </div>
  </div>
  <button
    className="MuiButtonBase-root-32 MuiButton-root-6 MuiButton-outlined-14 Component-button-1 Component-normalButton-2"
    disabled={false}
    onBlur={[Function]}
    onClick={[MockFunction]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "marginTop": "32px",
      }
    }
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-7"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-35 MuiIcon-fontSizeSmall-42 Component-normalIcon-4"
      >
        arrow_forward_ios
      </span>
      次へ進む
    </span>
    <span
      className="MuiTouchRipple-root-60"
    />
  </button>
</div>
`;
